--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-/public/upload
-/public/QrCode
-/public/cert
+/node_modules
+/public/hot
+/public/storage
 /storage/*.key
+/vendor
 /.idea
-/.env
-/*.rar
-
+/.vscode
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+.env
